crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__hour__multiple__specifier_periodic__specifier_periodic.snap
---
source: crates/tools/cron/src/tests/unit/hour.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "/2,1/2",
                    '-',
                ),
                Nom(
                    "1/2,1/2",
                    Alt,
                ),
            ],
        },
    ),
)
